syntax = "proto3";

option java_multiple_files = true;
option java_package = "fulcrum";
option java_outer_classname = "FulcrumProto";
option objc_class_prefix = "HLW";

package fulcrum;

// import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

/// Errors

message InternalError {
  message EncodeError {
    uint64 required  = 1;
    uint64 remaining = 2;
  }

  message DecodeError {
    message StackLine {
      string message = 1;
      string field   = 2;
    }
    /// A 'best effort' root cause description.
    string description       = 1;
    /// A stack of (message, field) name pairs, which identify the specific
    /// message type and field where decoding failed. The stack contains an
    /// entry per level of nesting.
    repeated StackLine stack = 2;
  }

  oneof Cause {
    string      missingRequiredArgument   = 1;
    EncodeError storageValueEncodingError = 2;
    DecodeError storageValueDecodingError = 3;
    string      storageError              = 4;
    string      transactionAborted        = 5;
    string      keyError                  = 6;
    string      valueError                = 7;
  }
}


//// Storage

message KeyUid {
  bytes sip = 1;  
}


message Key {
  string key              = 1;
  KeyUid uid              = 5;
}

message ValueEntry {
  KeyUid keyUid   = 1;
  oneof message {
    int32  i32    = 2;
    int64  i64    = 3;
    float  float  = 5;
    double double = 6;
    string str    = 7;
    bytes  bytes  = 8; 
//    CdnUid cdn    = 10;
//    CdnUid cdnStr = 11;
  }
}

message KvEntry {
//  KvMetadata metadata = 1;
  ValueEntry value    = 2;
}

// Store

message AddRequest {
  Key        key   = 1;
  ValueEntry value = 2;
}

message AddResponse {
  oneof Resp {
    Key           success = 1;
    Key           exists  = 2;
    InternalError error   = 100;
  }
}

message DeleteRequest {
  Key key   = 1;
}

message DeleteResponse {
  oneof Resp {
    KeyUid        success   = 1;
    KeyUid        notFound  = 2;
    InternalError error     = 100;
  }
}

message CopyRequest {
  Key                       keyFrom = 1;
  google.protobuf.Timestamp expiry  = 2; 
  Key                       keyTo   = 3;
  // string correlationId              = 2;
}

message CopyResponse {
  oneof Resp {
    CopyRequest   success         = 1;
    CopyRequest   fromKeyNotFound = 2;
    CopyRequest   toKeyExists     = 3;
    InternalError error           = 100;
  }
}

message GetRequest {
  Key  key            = 1;
  bool returnMetadata = 2;
}

message GetResponse {
  oneof Resp {
    KvEntry       success   = 1;
    KeyUid        notFound  = 2;
    InternalError error     = 100;
  }
}

message ContainsRequest {
  Key key = 1;
}

message ContainsResponse {
  oneof Resp {
    bool          success = 1;
    InternalError error   = 100;
  }
}

service DataTree {
  // rpc Transaction(stream AddRequest) returns (stream AddResponse) {}
  // rpc ReadTransaction(stream AddRequest) returns (stream AddResponse) {}
  // rpc Watch(AddRequest) returns (stream AddResponse) {}

  rpc Add(AddRequest) returns (AddResponse) {}
  rpc Copy(CopyRequest) returns (CopyResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}

  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Contains(ContainsRequest) returns (ContainsResponse) {}
//  rpc Search(SearchRequest) returns (stream SearchResponse) {}
}
